<resources>
    <string name="app_name">Submission1bahar</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="test_login">Login Firs</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email_dont_match">Password Invalit</string>
    <string name="password_dont_match">Email Invalit</string>
    <string name="input_name">input name</string>
    <string name="input_email">input Email</string>
    <string name="input_password">input Password</string>
    <string name="Logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yakin">are you sure Logout?</string>
    <string name="Censel">Censel</string>
    <string name="descripsion">descripsion</string>
    <string name="judul">Judul</string>
    <string name="tv_judul">Judul</string>
    <string name="tv_descripsi">Descripsi</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="appwidget_text">Storry Dicoding</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Storry app</string>
    <string name="empty_text">No Data</string>
    <string name="bahasa">localization bahasa</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">retry</string>


    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps">List Maps</string>
</resources>